salesforce/generated/command_center_ingest_api/objects/ccia_affiliate__dll/ccia_affiliate__dll.object-meta.xml
<CustomObject>
    <label>ccia_affiliate</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Other</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>