salesforce/generated/command_center_ingest_api/objects/ccia_affiliate__dll/fields/affiliateName__c.field-meta.xml
<CustomField>
    <fullName>affiliateName__c</fullName>
    <label>affiliateName</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>affiliateName</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>