salesforce/generated/command_center_ingest_api/objects/ccia_affiliate__dll/fields/affiliateTier__c.field-meta.xml
<CustomField>
    <fullName>affiliateTier__c</fullName>
    <label>affiliateTier</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>affiliateTier</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>