salesforce/generated/command_center_ingest_api/objects/ccia_affiliate__dll/fields/InternalOrganization__c.field-meta.xml
<CustomField>
    <fullName>InternalOrganization__c</fullName>
    <label>Internal Organization</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>InternalOrganization</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>